<resources>
    <string name="app_name">CALCULATOR</string>
    <string name="key_clear">C</string>
    <string name="key_back">B</string>
    <string name="key_percent">%</string>
    <string name="key_divide">/</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_multi">X</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_minus">-</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_plus">+</string>
    <string name="key_0">0</string>
    <string name="key_dot">.</string>
    <string name="key_result">=</string>
    <string name="theme_one">theme_light</string>
    <string name="theme_two">theme_dark</string>
</resources>