<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/screens"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@id/digits"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="1">

        <TextView
            android:id="@+id/top_screen"
            style="@style/TextViewTopMonitorPortrait"
            android:textSize="@dimen/text_size_screen"
            app:layout_constraintBottom_toTopOf="@id/bottom_screen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Top Screen" />

        <TextView
            android:id="@+id/bottom_screen"
            style="@style/TextViewTopMonitorPortrait.BottomMonitor"
            android:textSize="@dimen/text_size_screen"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/top_screen"
            tools:text="Bottom Screen"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/digits"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/screens"
        app:layout_constraintVertical_weight="2.5">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_clear"
            style="@style/ButtonStyleForPortrait"
            android:text="@string/key_clear"
            app:layout_constraintBottom_toTopOf="@id/key_7"
            app:layout_constraintEnd_toStartOf="@id/key_back"
            app:layout_constraintHeight_percent="0.18"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_back"
            style="@style/ButtonStyleForPortrait"
            android:text="@string/key_back"
            app:layout_constraintBottom_toTopOf="@id/key_8"
            app:layout_constraintEnd_toStartOf="@id/key_percent"
            app:layout_constraintHeight_percent="0.18"
            app:layout_constraintStart_toEndOf="@id/key_clear"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_percent"
            style="@style/ButtonStyleForPortrait"
            android:text="@string/key_percent"
            app:layout_constraintBottom_toTopOf="@id/key_multi"
            app:layout_constraintEnd_toStartOf="@id/key_divide"
            app:layout_constraintHeight_percent="0.18"
            app:layout_constraintStart_toEndOf="@id/key_back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_divide"
            style="@style/ButtonStyleForPortrait"
            android:text="@string/key_divide"
            app:layout_constraintBottom_toTopOf="@id/key_multi"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.18"
            app:layout_constraintStart_toEndOf="@id/key_percent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_7"
            style="@style/ButtonStyleForPortrait"
            android:text="@string/key_7"
            app:layout_constraintBottom_toTopOf="@id/key_4"
            app:layout_constraintEnd_toEndOf="@id/key_clear"
            app:layout_constraintHeight_percent="0.18"
            app:layout_constraintStart_toStartOf="@id/key_clear"
            app:layout_constraintTop_toBottomOf="@id/key_clear"
            app:layout_constraintWidth_percent="0.2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_8"
            style="@style/ButtonStyleForPortrait"
            android:text="@string/key_8"
            app:layout_constraintBottom_toTopOf="@id/key_5"
            app:layout_constraintEnd_toEndOf="@id/key_back"
            app:layout_constraintHeight_percent="0.18"
            app:layout_constraintStart_toStartOf="@id/key_back"
            app:layout_constraintTop_toBottomOf="@id/key_back"
            app:layout_constraintWidth_percent="0.2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_9"
            style="@style/ButtonStyleForPortrait"
            android:text="@string/key_9"
            app:layout_constraintBottom_toTopOf="@id/key_6"
            app:layout_constraintEnd_toEndOf="@id/key_percent"
            app:layout_constraintHeight_percent="0.18"
            app:layout_constraintStart_toStartOf="@id/key_percent"
            app:layout_constraintTop_toBottomOf="@id/key_percent"
            app:layout_constraintWidth_percent="0.2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_multi"
            style="@style/ButtonStyleForPortrait"
            android:text="@string/key_multi"
            app:layout_constraintBottom_toTopOf="@id/key_minus"
            app:layout_constraintEnd_toEndOf="@id/key_divide"
            app:layout_constraintHeight_percent="0.18"
            app:layout_constraintStart_toStartOf="@id/key_divide"
            app:layout_constraintTop_toBottomOf="@id/key_divide"
            app:layout_constraintWidth_percent="0.2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_4"
            style="@style/ButtonStyleForPortrait"
            android:text="@string/key_4"
            app:layout_constraintBottom_toTopOf="@id/key_1"
            app:layout_constraintEnd_toEndOf="@id/key_7"
            app:layout_constraintHeight_percent="0.18"
            app:layout_constraintStart_toStartOf="@id/key_7"
            app:layout_constraintTop_toBottomOf="@id/key_7"
            app:layout_constraintWidth_percent="0.2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_5"
            style="@style/ButtonStyleForPortrait"
            android:text="@string/key_5"
            app:layout_constraintBottom_toTopOf="@id/key_2"
            app:layout_constraintEnd_toEndOf="@id/key_8"
            app:layout_constraintHeight_percent="0.18"
            app:layout_constraintStart_toStartOf="@id/key_8"
            app:layout_constraintTop_toBottomOf="@id/key_8"
            app:layout_constraintWidth_percent="0.2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_6"
            style="@style/ButtonStyleForPortrait"
            android:text="@string/key_6"
            app:layout_constraintBottom_toTopOf="@id/key_3"
            app:layout_constraintEnd_toEndOf="@id/key_9"
            app:layout_constraintHeight_percent="0.18"
            app:layout_constraintStart_toStartOf="@id/key_9"
            app:layout_constraintTop_toBottomOf="@id/key_9"
            app:layout_constraintWidth_percent="0.2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_minus"
            style="@style/ButtonStyleForPortrait"
            android:text="@string/key_minus"
            app:layout_constraintBottom_toTopOf="@id/key_plus"
            app:layout_constraintEnd_toEndOf="@id/key_multi"
            app:layout_constraintHeight_percent="0.18"
            app:layout_constraintStart_toStartOf="@id/key_multi"
            app:layout_constraintTop_toBottomOf="@id/key_multi"
            app:layout_constraintWidth_percent="0.2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_1"
            style="@style/ButtonStyleForPortrait"
            android:text="@string/key_1"
            app:layout_constraintBottom_toTopOf="@id/key_0"
            app:layout_constraintEnd_toEndOf="@id/key_4"
            app:layout_constraintHeight_percent="0.18"
            app:layout_constraintStart_toStartOf="@id/key_4"
            app:layout_constraintTop_toBottomOf="@id/key_4"
            app:layout_constraintWidth_percent="0.2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_2"
            style="@style/ButtonStyleForPortrait"
            android:text="@string/key_2"
            app:layout_constraintBottom_toTopOf="@id/key_0"
            app:layout_constraintEnd_toEndOf="@id/key_5"
            app:layout_constraintHeight_percent="0.18"
            app:layout_constraintStart_toStartOf="@id/key_5"
            app:layout_constraintTop_toBottomOf="@id/key_5"
            app:layout_constraintWidth_percent="0.2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_3"
            style="@style/ButtonStyleForPortrait"
            android:text="@string/key_3"
            app:layout_constraintBottom_toTopOf="@id/key_dot"
            app:layout_constraintEnd_toEndOf="@id/key_6"
            app:layout_constraintHeight_percent="0.18"
            app:layout_constraintStart_toStartOf="@id/key_6"
            app:layout_constraintTop_toBottomOf="@id/key_6"
            app:layout_constraintWidth_percent="0.2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_plus"
            style="@style/ButtonStyleForPortrait"
            android:text="@string/key_plus"
            app:layout_constraintBottom_toTopOf="@id/key_result"
            app:layout_constraintEnd_toEndOf="@id/key_minus"
            app:layout_constraintHeight_percent="0.18"
            app:layout_constraintStart_toStartOf="@id/key_minus"
            app:layout_constraintTop_toBottomOf="@id/key_minus"
            app:layout_constraintWidth_percent="0.2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_0"
            style="@style/ButtonStyleForPortrait"
            android:text="@string/key_0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/key_2"
            app:layout_constraintHeight_percent="0.18"
            app:layout_constraintStart_toStartOf="@id/key_1"
            app:layout_constraintTop_toBottomOf="@id/key_1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_dot"
            style="@style/ButtonStyleForPortrait"
            android:text="@string/key_dot"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/key_3"
            app:layout_constraintHeight_percent="0.18"
            app:layout_constraintStart_toStartOf="@id/key_3"
            app:layout_constraintTop_toBottomOf="@id/key_3"
            app:layout_constraintWidth_percent="0.2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_result"
            style="@style/ButtonStyleForPortrait"
            android:text="@string/key_result"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/key_plus"
            app:layout_constraintHeight_percent="0.18"
            app:layout_constraintStart_toStartOf="@id/key_plus"
            app:layout_constraintTop_toBottomOf="@id/key_plus"
            app:layout_constraintWidth_percent="0.2" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>